# vcc-rt-demo

./: .gitignore  .gitmodules  CMakeLists.txt  blit.cpp  bvh_host.cpp  bvh_host.h  camera_host.cpp  host.h  main.cpp  main_gpu.cpp  model.cpp  model.h  util.c
data/: cube.mtl
data/scenes/cornellbox/: CornellBox.blend  CornellBox.glb  CornellBox.gltf  CornellBox.mtl  CornellBoxReal.blend  CornellBoxReal.glb
driver/: CMakeLists.txt  bvh_host.cpp  bvh_host.h  camera_host.cpp  driver.h  host.h  image_out.cpp  main.cpp  model.cpp  model.h  util.c
renderer/: CMakeLists.txt  all.cpp  all.cu  ao.cpp  ao.h  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  camera.cpp  camera.h  colormap.h  emitter.h  fresnel.h  material.h  matrix.cpp  microfacet.h  primitives.cpp  primitives.h  pt.cpp  pt.h  ra_math.h  random.h  rendercontext.h  renderer.cpp  renderer.h  sampling.h  shading.h  texture.h
